# Locos-backend/src/controllers/BuyItems/buyItems.routes.js
@@ -5,21 +5,16 @@ const controller = require('./buyItems.controller');
 const authenticationByJWT = require('../../auth/authenticate');
 const adminRoleHandler = require('../../auth/adminOnly');
 
-router.post('/', authenticationByJWT, (req, res, next) => {
+router.post('/', (req, res, next) => {
     return controller.create(req, res, next)
 });
 
-router.get('/', authenticationByJWT, adminRoleHandler, (req, res, next) => {
+router.get('/', adminRoleHandler, (req, res, next) => {
     return controller.findAll(req, res, next)
 });
 
-// router.get('/:id', authenticationByJWT, (req, res, next) => {
-//     return controller.findOne(req, res, next)
-// });
-
-// router.delete('/:id', (req, res, next) => {
-//     return controller.deleteOne(req, res, next)
-// });
-
+router.get('/:id', adminRoleHandler, (req, res, next) => {
+    return controller.findOne(req, res, next)
+});
 
 module.exports = router;
