# Locos-backend/src/controllers/Comment/comment.routes.js
@@ -5,19 +5,23 @@ const controller = require('./comment.controller');
 const authenticationByJWT = require('../../auth/authenticate');
 const adminRoleHandler = require('../../auth/adminOnly');
 
-router.post('/', authenticationByJWT, (req, res, next) => {
+router.post('/',  (req, res, next) => {
     return controller.create(req, res, next)
 });
 
-router.get('/', authenticationByJWT, (req, res, next) => {
+// router.get('/', authenticationByJWT, (req, res, next) => {
+//     return controller.findAll(req, res, next)
+// });
+
+router.get('/', (req, res, next) => {
     return controller.findAll(req, res, next)
 });
 
-router.get('/:id', authenticationByJWT, (req, res, next) => {
+router.get('/:id', (req, res, next) => {
     return controller.findOne(req, res, next)
 });
 
-router.delete('/:id', authenticationByJWT, adminRoleHandler, (req, res, next) => {
+router.delete('/:id', adminRoleHandler, (req, res, next) => {
     return controller.deleteOne(req, res, next)
 });
 
